fix issues and increase font contrast

--- a/src/components/experiences/ExperienceView.scss
+++ b/src/components/experiences/ExperienceView.scss
@@ -32,7 +32,7 @@
     margin: 0 36px 0 48px;
     padding: 16px 0;
 
-    color: var(--primary-color-l30);
+    color: var(--primary-color);
 
 
     @media screen and (max-width: 768px) {
@@ -41,13 +41,13 @@
 
     &.position {
         color: var(--accent-color);
-        font-weight: 500;
+        font-weight: 700;
     }
     &.period {
-        font-weight: 500;
+        font-weight: 700;
     }
     &.hidden {
-        font-weight: 500;
+        font-weight: 700;
     }
     &.company {
     }
@@ -71,7 +71,7 @@
 }
 
 .experience-item-content-highlighted {
-    font-weight: 500;
+    font-weight: 700;
     color: var(--primary-color);
     &.special {
         color: var(--accent-color);
